--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "homepage": "https://kkasyan.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.5.3",
+    "@fontsource/great-vibes": "^4.5.10",
+    "@fontsource/nunito": "^4.5.12",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -12,9 +15,11 @@
     "axios": "^1.3.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-sparkle": "^2.0.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
   },
